// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHistory should render correctly when empty 1`] = `
<View
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      [
        {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderBottomWidth": 1,
        },
        {
          "backgroundColor": "#FFF9F6",
        },
        {
          "borderColor": "#FEEDE5",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingBottom": 6,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 6,
          },
          {
            "paddingLeft": 32,
            "paddingRight": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          transaction history
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityHint="go to export transaction history"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTSafeAreaView
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          {
            "paddingBottom": 32,
            "paddingLeft": 32,
            "paddingRight": 32,
            "paddingTop": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "gap": 32,
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            {
              "testUri": "../../../src/assets/animated/logo-rotate.gif",
            }
          }
          style={
            {
              "height": 130,
              "width": 118,
            }
          }
        />
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "color": "#7D675E",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          nothing yet...
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`TransactionHistory should render correctly with tx 1`] = `
<View
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      [
        {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderBottomWidth": 1,
        },
        {
          "backgroundColor": "#FFF9F6",
        },
        {
          "borderColor": "#FEEDE5",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingBottom": 6,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 6,
          },
          {
            "paddingLeft": 32,
            "paddingRight": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          transaction history
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityHint="go to export transaction history"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTSafeAreaView
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
          },
          {
            "paddingBottom": 32,
            "paddingLeft": 32,
            "paddingRight": 32,
            "paddingTop": 32,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "gap": 16,
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            {
              "paddingBottom": 32,
              "paddingTop": 32,
            },
          ]
        }
        data={
          [
            {
              "amount": 900,
              "confirmed": false,
              "date": 2022-09-14T16:14:02.835Z,
              "height": undefined,
              "id": "txid1",
              "offerData": [
                {
                  "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
                  "amount": 900,
                  "contractId": undefined,
                  "currency": undefined,
                  "offerId": "123",
                  "price": undefined,
                },
              ],
              "type": "TRADE",
            },
            {
              "amount": 900,
              "confirmed": true,
              "date": 2022-09-14T16:14:02.835Z,
              "height": 1,
              "id": "txid1_confirmed",
              "offerData": [
                {
                  "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
                  "amount": 900,
                  "contractId": undefined,
                  "currency": undefined,
                  "offerId": "123",
                  "price": undefined,
                },
              ],
              "type": "TRADE",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={20}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onRefresh={[MockFunction]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        refreshControl={
          <RefreshControlMock
            onRefresh={[MockFunction]}
            refreshing={false}
          />
        }
        refreshing={false}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={[]}
        viewabilityConfigCallbackPairs={[]}
      >
        <RCTRefreshControl />
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#FFFCFA",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "overflow": "hidden",
                    },
                    {
                      "borderColor": "#65A519",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "space-between",
                      "paddingBottom": 12,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 12,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flexShrink": 1,
                        "gap": 4,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "height": 17,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        numberOfLines={1}
                        style={
                          [
                            {
                              "color": "#2B1911",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.16,
                              "lineHeight": 24,
                            },
                            [
                              [
                                {
                                  "fontFamily": "Baloo2-SemiBold",
                                  "fontSize": 16,
                                  "letterSpacing": 0.16,
                                  "lineHeight": 28,
                                },
                                false,
                              ],
                              {
                                "marginBottom": -40,
                                "marginTop": -40,
                              },
                            ],
                            false,
                          ]
                        }
                      >
                        bought
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 6,
                        }
                      }
                    >
                      <test-file-stub
                        fill="#65A519"
                        style={
                          [
                            {
                              "height": 17,
                              "width": 17,
                            },
                            undefined,
                          ]
                        }
                      />
                      <View
                        style={
                          {
                            "height": 17,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          style={
                            [
                              {
                                "color": "#2B1911",
                                "fontFamily": "Baloo2-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0.16,
                                "lineHeight": 24,
                              },
                              [
                                [
                                  {
                                    "color": "#7D675E",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0.14,
                                    "lineHeight": 20,
                                  },
                                  false,
                                  {
                                    "width": 100,
                                  },
                                ],
                                {
                                  "marginBottom": -40,
                                  "marginTop": -40,
                                },
                              ],
                              false,
                            ]
                          }
                          suppressHighlighting={true}
                        >
                          09 / 14 / 22
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      [
                        {
                          "alignItems": "flex-end",
                          "height": 40,
                          "paddingBottom": 1,
                          "paddingTop": 4,
                          "width": 141,
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          undefined,
                          {
                            "justifyContent": "center",
                          },
                          {
                            "height": 10,
                            "width": 135,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "flex-end",
                              "marginBottom": -40,
                              "marginTop": -40,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              {
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                        >
                          <test-file-stub
                            fill="#888"
                            style={
                              [
                                {
                                  "height": 24,
                                  "width": 24,
                                },
                                {
                                  "height": 12,
                                  "width": 12,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "flexDirection": "row",
                              },
                              {
                                "alignItems": "baseline",
                              },
                              {
                                "gap": 2,
                                "paddingTop": 3,
                              },
                            ]
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              [
                                {
                                  "color": "#2B1911",
                                  "fontFamily": "Baloo2-Regular",
                                  "fontSize": 16,
                                  "letterSpacing": 0.16,
                                  "lineHeight": 24,
                                },
                                [
                                  {
                                    "alignItems": "center",
                                    "fontFamily": "CourierPrime-Bold",
                                    "textAlign": "center",
                                  },
                                  {
                                    "fontSize": 17,
                                    "lineHeight": 23,
                                  },
                                ],
                                false,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -3.57,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              .
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -5.949999999999999,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                               
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -5.949999999999999,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                               
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              9
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                          </Text>
                          <View
                            style={
                              {
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    {
                                      "fontFamily": "Baloo2-Medium",
                                    },
                                    false,
                                    {
                                      "fontSize": 12,
                                      "lineHeight": 18,
                                      "paddingBottom": 2,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              sats
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={null}
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "backgroundColor": "#FFFCFA",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "overflow": "hidden",
                    },
                    {
                      "borderColor": "#65A519",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 8,
                      "justifyContent": "space-between",
                      "paddingBottom": 12,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "paddingTop": 12,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flexShrink": 1,
                        "gap": 4,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "height": 17,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        numberOfLines={1}
                        style={
                          [
                            {
                              "color": "#2B1911",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 16,
                              "letterSpacing": 0.16,
                              "lineHeight": 24,
                            },
                            [
                              [
                                {
                                  "fontFamily": "Baloo2-SemiBold",
                                  "fontSize": 16,
                                  "letterSpacing": 0.16,
                                  "lineHeight": 28,
                                },
                                false,
                              ],
                              {
                                "marginBottom": -40,
                                "marginTop": -40,
                              },
                            ],
                            false,
                          ]
                        }
                      >
                        bought
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "gap": 6,
                        }
                      }
                    >
                      <test-file-stub
                        fill="#65A519"
                        style={
                          [
                            {
                              "height": 17,
                              "width": 17,
                            },
                            undefined,
                          ]
                        }
                      />
                      <View
                        style={
                          {
                            "height": 17,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          style={
                            [
                              {
                                "color": "#2B1911",
                                "fontFamily": "Baloo2-Regular",
                                "fontSize": 16,
                                "letterSpacing": 0.16,
                                "lineHeight": 24,
                              },
                              [
                                [
                                  {
                                    "color": "#7D675E",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0.14,
                                    "lineHeight": 20,
                                  },
                                  false,
                                  {
                                    "width": 100,
                                  },
                                ],
                                {
                                  "marginBottom": -40,
                                  "marginTop": -40,
                                },
                              ],
                              false,
                            ]
                          }
                          suppressHighlighting={true}
                        >
                          09 / 14 / 22
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      [
                        {
                          "alignItems": "flex-end",
                          "height": 40,
                          "paddingBottom": 1,
                          "paddingTop": 4,
                          "width": 141,
                        },
                        false,
                        false,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          undefined,
                          {
                            "justifyContent": "center",
                          },
                          {
                            "height": 10,
                            "width": 135,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "justifyContent": "flex-end",
                              "marginBottom": -40,
                              "marginTop": -40,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              {
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                        >
                          <test-file-stub
                            fill="#888"
                            style={
                              [
                                {
                                  "height": 24,
                                  "width": 24,
                                },
                                {
                                  "height": 12,
                                  "width": 12,
                                },
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "flexDirection": "row",
                              },
                              {
                                "alignItems": "baseline",
                              },
                              {
                                "gap": 2,
                                "paddingTop": 3,
                              },
                            ]
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              [
                                {
                                  "color": "#2B1911",
                                  "fontFamily": "Baloo2-Regular",
                                  "fontSize": 16,
                                  "letterSpacing": 0.16,
                                  "lineHeight": 24,
                                },
                                [
                                  {
                                    "alignItems": "center",
                                    "fontFamily": "CourierPrime-Bold",
                                    "textAlign": "center",
                                  },
                                  {
                                    "fontSize": 17,
                                    "lineHeight": 23,
                                  },
                                ],
                                false,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -3.57,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              .
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -5.949999999999999,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                               
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B19111A",
                                      "letterSpacing": -5.949999999999999,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                               
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              9
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    [
                                      {
                                        "alignItems": "center",
                                        "fontFamily": "CourierPrime-Bold",
                                        "textAlign": "center",
                                      },
                                      {
                                        "fontSize": 17,
                                        "lineHeight": 23,
                                      },
                                    ],
                                    {
                                      "color": "#2B1911",
                                      "letterSpacing": -1.275,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              0
                            </Text>
                          </Text>
                          <View
                            style={
                              {
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              style={
                                [
                                  {
                                    "color": "#2B1911",
                                    "fontFamily": "Baloo2-Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0.16,
                                    "lineHeight": 24,
                                  },
                                  [
                                    {
                                      "fontFamily": "Baloo2-Medium",
                                    },
                                    false,
                                    {
                                      "fontSize": 12,
                                      "lineHeight": 18,
                                      "paddingBottom": 2,
                                    },
                                  ],
                                  false,
                                ]
                              }
                            >
                              sats
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>
</View>
`;
